fix z-index styling to display contact on top

--- a/src/App.css
+++ b/src/App.css
@@ -386,7 +386,7 @@ div.decoration-line {
   height: 350px;
   width: 100px;
   position: fixed;
-  z-index: 1;
+  z-index: 3;
   bottom: 0;
   right: 0;
   background-color: transparent;
@@ -552,7 +552,7 @@ input#formAuthor, input#formEmail, textarea#formContent {
 .post-block-white {
   margin-top: 15px;
   position: relative;
-  z-index: 3;
+  z-index: 2;
   margin-bottom: 60px;
   /* padding: -10px 0px 0px; */
   border: 1px solid #dadada;
